--- a/source/_posts/发表博客.md
+++ b/source/_posts/发表博客.md
@@ -5,6 +5,5 @@ categories: Hexo
 tags: hexo
 ---
 
- *1.发表文章
- 	当我们需要发表文章的时候，就在git bash上输入命令 hexo new "文章标题"即可
- 	'hexo new "发表博客"' 
+### 1.发表文章
+	``` hexo new "发表文章" ``` 
